# aloo

./: AGENTS.md  CONTEXT.md  Cargo.toml  README.md  SPEC.md
crates/bench/: Cargo.toml
crates/bench/corpus/benign/api-call/: index.js  package.json
crates/bench/corpus/benign/legitimate-fetch/: index.js  package.json
crates/bench/corpus/benign/readable-strings/: index.js  package.json
crates/bench/corpus/benign/safe-postinstall/: package.json
crates/bench/corpus/benign/safe-postinstall/scripts/: setup.js
crates/bench/corpus/malicious/base64-blob/: package.json
crates/bench/corpus/malicious/dangerous-install-script/: package.json
crates/bench/corpus/malicious/discord-webhook/: index.js  package.json
crates/bench/corpus/malicious/env-to-fetch/: index.js  package.json
crates/bench/corpus/malicious/eval-decoded-payload/: index.js  package.json
crates/bench/corpus/malicious/from-char-code-chain/: index.js  package.json
crates/bench/corpus/malicious/obfuscated-payload/: index.js  package.json
crates/bench/corpus/malicious/telegram-bot/: index.js  package.json
crates/bench/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/engine/: Cargo.toml
crates/engine/src/: analyzer.rs  lib.rs  loader.rs  model.rs  score.rs
crates/engine/src/backend/: heuristic.rs  mod.rs  oxc.rs
crates/engine/src/signals/: entropy.rs  ioc.rs  manifest.rs  mod.rs  taint.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: main.rs
scripts/: issue_creator.sh
