[workspace]
members = [
    "crates/bench",
    "crates/cli",
    "crates/engine",
    "crates/mcp",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
aloo-engine = { path = "crates/engine" }
flate2 = "1.1.9"
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tar = "0.4.46"
thiserror = "2.0.18"
