[package]
name = "aloo-engine"
version.workspace = true
edition.workspace = true

[features]
default = []
oxc = []

[dependencies]
flate2.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta = { version = "1.48.0", features = ["json"] }
